project(GameRenderEngine)

if(WIN32)
	set(DEPENDENCY_FILES 
    	opengl32.lib
    	glfw3.lib
    	glfw3-vc140.lib
    	assimp-vc142-mt.lib
    	glew32.lib
    	liblua53.lib
    	freetype.lib
    	irrKlang.lib
    	GFSDK_FaceWorks.win64.lib
	)
elseif(APPLE)
	set(DEPENDENCY_FILES
	${FREETYPE_LIBRARIES}
	${assimp_LIBRARIES}
	${GLEW_LIBRARIES}
	${GLFW_LIBRARIES}
	${OPENGL_LIBRARIES}
	#libfreetype.dylib
	)

endif(WIN32)

set(DEPENDENCY_SFILES
	${IMGUI}/imgui.cpp
	${IMGUI}/imgui_demo.cpp
	${IMGUI}/imgui_draw.cpp
	${IMGUI}/imgui_impl_glfw.cpp
	${IMGUI}/imgui_impl_opengl3.cpp
	${IMGUI}/imgui_widgets.cpp
	#${STB_IMAGE}/include/deprecated/stb_image.c
	)
	
set(SRC_FILES 	
    ${ANALYTICS_SRC}
    ${AUDIO_CORE_SRC}
    ${AUDIO_ENTITY_SRC}
    ${AUDIO_RESOURCE_SRC}
    ${CAMERA_SRC}
    ${CORE_API_SRC}
    ${CORE_ECS_SRC}
    ${CORE_ECS_COMPONENT_SRC}
    ${CORE_HELPER_SRC}
    ${CORE_SCRIPTING_SRC}
    ${CORE_Util_SRC}
    ${EDITOR_CORE_SRC}
    ${EDITOR_HELPER_SRC}
    ${EDITOR_PANELS_SRC}
    ${EDITOR_UTIL_SRC}
    ${EVENT_SRC}
    ${FILE_SRC}
    ${FILE_PATH_SRC}
    ${GLOBAL_SRC}
    ${LOG_SRC}
    ${MATH_SRC}
    ${RENDER_SRC}
    ${RENDER_ANIMATION_SRC}
    ${RENDER_BOUNDING_SRC}
    ${RENDER_CONTEXT_SRC}
    ${RENDER_DEFERRED_SRC}
    ${RENDER_DEFERRED_PROGRAM_SRC}
    ${RENDER_FONT_SRC}
    ${RENDER_FORWARD_SRC}
    ${RENDER_LIGHTING_SRC}
    ${RENDER_MATERIAL_SRC}
    ${RENDER_MESH_SRC}
    ${RENDER_RESOURCE_SRC}
    ${RENDER_RESOURCE_LOADER_SRC}
    ${RENDER_RESOURCE_PARSER_SRC}
	${RENDER_RESOURCE_LOADER_ASYNC_SRC}
    ${RENDER_SETTING_SRC}
    ${RENDER_SHADER_SRC}
    ${RENDER_SHADOW_SRC}
    ${RHI_SRC}
    ${RHI_OPENGL_SRC}
    ${SCENE_SRC}
    ${THREAD_SRC}
    ${TIME_SRC}
    ${UI_SRC}
    ${UI_API_SRC}
    ${UI_INTERNEL_SRC}
    ${UI_LAYOUT_SRC}
    ${UI_MODULE_SRC}
    ${UI_PANEL_SRC}
    ${UI_PLUGIN_SRC}
    ${UI_VISUAL_SRC}
    ${UI_WIDGETS_SRC}
    ${UI_WIDGETS_BUTTON_SRC}
    ${UI_WIDGETS_DRAG_SRC}
    ${UI_WIDGETS_INPUTFIELD_SRC}
    ${UI_WIDGETS_MENU_SRC}
    ${UI_WIDGETS_SELECTION_SRC}
    ${UI_WIDGETS_TEXT_SRC}
    ${UTIL_SRC}
    ${WINDOW_SRC}
    ${WINDOW_CONTEXT_SRC}
    ${WINDOW_INPUT_SRC}
	${WINDOW_CONTEXT_SRC}
	${DEPENDENCY_SFILES}
	${CMAKE_CURRENT_SOURCE_DIR}/pbr_capture.h
	${CMAKE_CURRENT_SOURCE_DIR}/pbr_capture.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Source.cpp
)	

INCLUDE_DIRECTORIES( BEFORE
  ${GLEW}/include
  ${GLM}
  ${STB_IMAGE}/include
  ${ASSIMP}/include
  ${GLFW}/include
  ${THIRD_LUA}/include
  ${FreeType}
  ${FREETYPE_INCLUDE_DIR}
  ${assimp_INCLUDE_DIRS}
  ${OPENGL_INCLUDE_DIRS}
  /System/Library/Frameworks
  ${GLFW_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIR}
  ${IRRKLANG}/include
  ${VULKAN}
  ${GFSDK}
)				

link_directories(
  ${ASSIMP}/lib
  ${GLFW}/lib/x64
  ${GLEW}/lib/x64
  ${THIRD_LUA}/lib
  ${FreeType}/lib
  ${FREETYPE_LIBRARIES}
  ${IRRKLANG}/lib
  ${VK_SDK_PATH}/Lib
  ${GFSDK}/lib
)

add_executable(GameRenderEngine ${SRC_FILES})

SOURCE_GROUP(Analytics FILES  ${ANALYTICS_SRC})

SOURCE_GROUP(Audio/Core FILES  ${AUDIO_CORE_SRC})
SOURCE_GROUP(Audio/Entity FILES  ${AUDIO_ENTITY_SRC})
SOURCE_GROUP(Audio/Resource FILES  ${AUDIO_RESOURCE_SRC})

SOURCE_GROUP(Camera FILES  ${CAMERA_SRC})

SOURCE_GROUP(Core/API FILES  ${CORE_API_SRC})
SOURCE_GROUP(Core/ECS FILES  ${CORE_ECS_SRC})
SOURCE_GROUP(Core/ECS/Component FILES  ${CORE_ECS_COMPONENT_SRC})
SOURCE_GROUP(Core/Helper FILES  ${CORE_HELPER_SRC})
SOURCE_GROUP(Core/Scripting FILES  ${CORE_SCRIPTING_SRC})
SOURCE_GROUP(Core/Util FILES  ${CORE_Util_SRC})

SOURCE_GROUP(Editor/Core FILES  ${EDITOR_CORE_SRC})
SOURCE_GROUP(Editor/Helper FILES  ${EDITOR_HELPER_SRC})
SOURCE_GROUP(Editor/Panels FILES  ${EDITOR_PANELS_SRC})
SOURCE_GROUP(Editor/Util FILES  ${EDITOR_UTIL_SRC})

SOURCE_GROUP(Event FILES  ${EVENT_SRC})

SOURCE_GROUP(File FILES  ${FILE_SRC})
SOURCE_GROUP(File/Path FILES  ${FILE_PATH_SRC})

SOURCE_GROUP(Global FILES  ${GLOBAL_SRC})

SOURCE_GROUP(Log FILES  ${LOG_SRC})

SOURCE_GROUP(Math FILES  ${MATH_SRC})

SOURCE_GROUP(Render FILES  ${RENDER_SRC})
SOURCE_GROUP(Render/Animation FILES  ${RENDER_ANIMATION_SRC})
SOURCE_GROUP(Render/Bounding FILES  ${RENDER_BOUNDING_SRC})
SOURCE_GROUP(Render/Context FILES  ${RENDER_CONTEXT_SRC})
SOURCE_GROUP(Render/Deferred FILES  ${RENDER_DEFERRED_SRC})
SOURCE_GROUP(Render/Deferred/Program FILES  ${RENDER_DEFERRED_PROGRAM_SRC})
SOURCE_GROUP(Render/Font FILES  ${RENDER_FONT_SRC})
SOURCE_GROUP(Render/Forward FILES  ${RENDER_FORWARD_SRC})
SOURCE_GROUP(Render/Lighting FILES  ${RENDER_LIGHTING_SRC})
SOURCE_GROUP(Render/Material FILES  ${RENDER_MATERIAL_SRC})
SOURCE_GROUP(Render/Mesh FILES  ${RENDER_MESH_SRC})
SOURCE_GROUP(Render/Resource FILES  ${RENDER_RESOURCE_SRC})
SOURCE_GROUP(Render/Resource/Parser FILES  ${RENDER_RESOURCE_PARSER_SRC})
SOURCE_GROUP(Render/Resource/Loader FILES  ${RENDER_RESOURCE_LOADER_SRC})
SOURCE_GROUP(Render/Resource/Loader/Async FILES  ${RENDER_RESOURCE_LOADER_ASYNC_SRC})
SOURCE_GROUP(Render/Setting FILES  ${RENDER_SETTING_SRC})
SOURCE_GROUP(Render/Shader FILES  ${RENDER_SHADER_SRC})
SOURCE_GROUP(Render/Shadow FILES  ${RENDER_SHADOW_SRC})

SOURCE_GROUP(RHI FILES  ${RHI_SRC})
SOURCE_GROUP(RHI/OpenGL FILES  ${RHI_OPENGL_SRC})

SOURCE_GROUP(Scene FILES  ${SCENE_SRC})

SOURCE_GROUP(Thread FILES  ${THREAD_SRC})

SOURCE_GROUP(Time FILES  ${TIME_SRC})

SOURCE_GROUP(UI FILES  ${UI_SRC})
SOURCE_GROUP(UI/API FILES  ${UI_API_SRC})
SOURCE_GROUP(UI/Internel FILES  ${UI_INTERNEL_SRC})
SOURCE_GROUP(UI/Layout FILES  ${UI_LAYOUT_SRC})
SOURCE_GROUP(UI/Module FILES  ${UI_MODULE_SRC})
SOURCE_GROUP(UI/Panel FILES  ${UI_PANEL_SRC})
SOURCE_GROUP(UI/Plugin FILES  ${UI_PLUGIN_SRC})
SOURCE_GROUP(UI/Visual FILES  ${UI_VISUAL_SRC})
SOURCE_GROUP(UI/Widgets FILES  ${UI_WIDGETS_SRC})
SOURCE_GROUP(UI/Widgets/Button FILES  ${UI_WIDGETS_BUTTON_SRC})
SOURCE_GROUP(UI/Widgets/Drag FILES  ${UI_WIDGETS_DRAG_SRC})
SOURCE_GROUP(UI/Widgets/InputField FILES  ${UI_WIDGETS_INPUTFIELD_SRC})
SOURCE_GROUP(UI/Widgets/Menu FILES  ${UI_WIDGETS_MENU_SRC})
SOURCE_GROUP(UI/Widgets/Selection FILES  ${UI_WIDGETS_SELECTION_SRC})
SOURCE_GROUP(UI/Widgets/Text FILES  ${UI_WIDGETS_TEXT_SRC})

SOURCE_GROUP(Util FILES  ${UTIL_SRC})

SOURCE_GROUP(Window FILES  ${WINDOW_SRC})
SOURCE_GROUP(Window/Context FILES  ${WINDOW_CONTEXT_SRC})
SOURCE_GROUP(Window/Input FILES  ${WINDOW_INPUT_SRC})

set(EXECUTABLE_OUTPUT_PATH "../../Bin")

#
if(WIN32)
	target_link_libraries(GameRenderEngine PRIVATE ${DEPENDENCY_FILES})	
endif(WIN32)
		
if(APPLE)
	target_link_libraries(GameRenderEngine PRIVATE  ${DEPENDENCY_FILES})
endif(APPLE)



set(CMAKE_WORKING_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}")


############################copy dll #############################

file(GLOB ASSIMPDLL ${ASSIMP}/bin/x64/*.dll) 
file(GLOB GLFWDLL ${GLFW}/bin/x64/*.dll) 
file(GLOB GLEWDLL ${GLEW}/bin/x64/*.dll) 
file(GLOB LUADLL ${THIRD_LUA}/bin/*.dll) 
file(GLOB FREETYPEDLL ${FreeType}/bin/*.dll) 
file(GLOB IRRKLANGDLL ${IRRKLANG}/bin/*.dll) 
#file(GLOB VULKANDLL ${IRRKLANG}/bin/*.dll) 
file(GLOB GFSDKDLL ${GFSDK}/bin/*.dll) 

set (DLLFILES 
	${ASSIMPDLL}
	${GLFW}
	${GLEW}
	${LUADLL}
	${FREETYPEDLL}
	${IRRKLANGDLL}
	${GFSDKDLL}
	)
 
if(WIN32)
	add_custom_command(TARGET GameRenderEngine POST_BUILD
    	COMMAND ${CMAKE_COMMAND} -E copy ${DLLFILES} ${CMAKE_CURRENT_SOURCE_DIR}/../Bin)
endif(WIN32)
############################copy dll #############################

set_target_properties(GameRenderEngine PROPERTIES CMAKE_WORKING_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}")

set_target_properties(GameRenderEngine PROPERTIES RUNTIME_WORKING_DIRECTORY_DEBUG "${EXECUTABLE_OUTPUT_PATH}")
set_target_properties(GameRenderEngine PROPERTIES RUNTIME_WORKING_DIRECTORY_RELEASE "${EXECUTABLE_OUTPUT_PATH}")
set_target_properties(GameRenderEngine PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${EXECUTABLE_OUTPUT_PATH}")
set_target_properties(GameRenderEngine PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${EXECUTABLE_OUTPUT_PATH}")
set_target_properties(GameRenderEngine PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}")
